# unarc-rs

./: .gitignore  Cargo.toml  READ.ME  README.md  test.output
.cargo/: config.toml
.github/workflows/: run_tests.yml
crates/unarc-cli/: Cargo.toml  README.md
crates/unarc-cli/src/: main.rs  password.rs
crates/unarc-rs/: Cargo.toml  README.md
crates/unarc-rs/examples/: arc_extract.rs  arj_view.rs  bit_decode_test.rs  test_tree.rs  uc2_test.rs  unified_extract.rs  unified_list.rs  zoo_view.rs
crates/unarc-rs/src/: encryption.rs  error.rs  lib.rs  unified.rs
crates/unarc-rs/src/ace/: ace_archive.rs  bitstream.rs  crc16.rs  crypto.rs  header.rs  huffman.rs  lz77.rs  mod.rs  password_verifier.rs
crates/unarc-rs/src/arc/: arc_archive.rs  crushed.rs  distilled.rs  distilled_table.rs  lzw.rs  mod.rs  password_verifier.rs  rle.rs  unsqueeze.rs
crates/unarc-rs/src/arj/: arj_archive.rs  crypto.rs  decode_fastest.rs  local_file_header.rs  mod.rs  password_verifier.rs
crates/unarc-rs/src/bz2/: mod.rs
crates/unarc-rs/src/gz/: mod.rs
crates/unarc-rs/src/ha/: acoder.rs  asc.rs  ha_archive.rs  header.rs  hsc.rs  mod.rs
crates/unarc-rs/src/hyp/: header.rs  hyp_archive.rs  hyp_unpack.rs  mod.rs
crates/unarc-rs/src/ice/: mod.rs
crates/unarc-rs/src/lha/: lha_archive.rs
crates/unarc-rs/src/packice/: mod.rs
crates/unarc-rs/src/rar/: mod.rs  password_verifier.rs  rar_archive.rs
crates/unarc-rs/src/sevenz/: mod.rs  password_verifier.rs  sevenz_archive.rs
crates/unarc-rs/src/sq/: mod.rs  sq_archive.rs
crates/unarc-rs/src/sqz/: file_header.rs  sqz_archive.rs  sqz_header.rs  unsqz.rs
crates/unarc-rs/src/tar/: mod.rs
crates/unarc-rs/src/tbz/: mod.rs
crates/unarc-rs/src/tgz/: mod.rs
crates/unarc-rs/src/uc2/: consts.rs  decompress.rs  mod.rs  supermaster_decompressed.rs  uc2_archive.rs
crates/unarc-rs/src/z/: lzw.rs  mod.rs
crates/unarc-rs/src/zip/: mod.rs  multi_volume.rs  password_verifier.rs  zip_archive.rs
crates/unarc-rs/src/zoo/: dirent.rs  zoo_archive.rs  zoo_header.rs
crates/unarc-rs/tests/: 7z_decompression.rs  ace_decompression.rs  acid-70a.rar  arc_decompression.rs  arj_decompression.rs  arj_failures.rs  bz2_decompression.rs  gz_decompression.rs  ha_decompression.rs  hyp_decompression.rs  ice_decompression.rs  pi9_pack_ice.rs  simple_uc2_test.rs  sq_decompression.rs  sqz_decompression.rs  sqz_failures.rs  tar_decompression.rs  tarz_decompression.rs  tbz_decompression.rs  tgz_decompression.rs  uc2_decompression.rs  uc2_failures.rs  unified_api.rs  z_decompression.rs  zip_decompression.rs  zoo_decompression.rs  zoo_failures.rs
crates/unarc-rs/tests/7z/multi/: unarc.7z.001  unarc.7z.002  unarc.7z.003
crates/unarc-rs/tests/Z/: LICENSE.Z
crates/unarc-rs/tests/ace/: license1.ace
crates/unarc-rs/tests/ace/multi/: unarc.ace  unarc.c00  unarc.c01
crates/unarc-rs/tests/arc/: READ.COM  license_cypted.arc  wrongcrc16.arc
crates/unarc-rs/tests/arj/: license_crypted.arj  method1.arj  method2.arj  wrongcrc32.arj
crates/unarc-rs/tests/arj/multi/: test_file.a01  test_file.a02  test_file.arj
crates/unarc-rs/tests/ha/: asc.ha
crates/unarc-rs/tests/hyp/: invalid.hyp  stored.hyp
crates/unarc-rs/tests/pak/: license.pak  license_crunched.pak  license_crushed.pak  license_squashed.pak
crates/unarc-rs/tests/pi9/: KOERPER.PI9  MAGGIE.PI9  REBATE.PI9
crates/unarc-rs/tests/qqq/: license.sq2
crates/unarc-rs/tests/rar/multi/: unarc.part1.rar  unarc.part2.rar  unarc.part3.rar
crates/unarc-rs/tests/sqz/: license_m1.sqz  license_m3.sqz  wrongcrc.sqz
crates/unarc-rs/tests/tbz/: license.tbz2
crates/unarc-rs/tests/uc2/: fast.uc2  tight.uc2
crates/unarc-rs/tests/ue2/: license.ue2
crates/unarc-rs/tests/zip/multi/: unarc.001  unarc.002  unarc.003
crates/unarc-rs/tests/zoo/: default.zoo
doc/: arc.md  arc.txt  arj.md  ha.md  hyper.md  ice_dos.md  pack_ice.md  sqz.md  sqz.txt  zoo.md  zoo.txt
doc/ha/: ha.txt
examples/: arc_extract.rs  arc_view.rs  arj_extract.rs  arj_view.rs  bit_decode_test.rs  extract.rs  uc2_test.rs  unified_extract.rs  unified_list.rs  view.rs  zoo_extract.rs  zoo_view.rs
src/: arc_archive.rs  date_time.rs  error.rs  lib.rs  local_file_header.rs  macros.rs  rle.rs  unified.rs
tests/: Z_decompression.rs  arc_decompression.rs  arc_failures.rs  arj_decompression.rs  arj_failures.rs  gz_decompression.rs  ha_decompression.rs  hyp_decompression.rs  hyp_failures.rs  ice_decompression.rs  sq_decompression.rs  sqz_decompression.rs  sqz_failures.rs  uc2_decompression.rs  unified_api.rs  z_decompression.rs  zoo_decompression.rs  zoo_failures.rs
(+108 files in other folders)
