[workspace]
resolver = "2"
members = [
    "crates/unarc-rs",
    "crates/unarc-cli",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
homepage = "https://github.com/mkrueger/unarc-rs"
repository = "https://github.com/mkrueger/unarc-rs"
license = "MIT OR Apache-2.0"

