[package]
name = "unarc-cli"
version = "0.6.0"
edition = "2021"
description = "Universal Archive Extractor - CLI tool for extracting various archive formats"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
homepage = "https://github.com/mkrueger/unarc-rs"
repository = "https://github.com/mkrueger/unarc-rs"
license = "MIT OR Apache-2.0"

[[bin]]
name = "unarc"
path = "src/main.rs"

[dependencies]
unarc-rs = { path = "../unarc-rs" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
