[package]
name = "unarc-cli"
version.workspace = true
edition.workspace = true
description = "Universal Archive Extractor - CLI tool for extracting various archive formats"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "unarc"
path = "src/main.rs"

[dependencies]
unarc-rs = { version = "0.6.0", path = "../unarc-rs" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
