[package]
name = "unarc-rs"
version.workspace = true
edition.workspace = true
description = "Universal archive extraction & decompression library for retro + modern formats (7z, ZIP, RAR, LHA/LZH, TAR, ARJ, ARC/PAK, ZOO, HA, UC2, SQ/SQ2, SQZ, HYP, gz, bz2, Z)."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4.29"
crc32fast = "1.5.0"
crc16 = "0.4.0"
chrono = "0.4.44"
delharc = "0.6.1"
salzweg = "0.1.4"
bitstream-io = "4.10.0"
zip = { version = "8.5", features = ["legacy-zip", "aes-crypto"] }
unrar = "0.5.8"
sevenz-rust2 = "0.20"
thiserror = "2.0"
tar = "0.4"
flate2 = "1.1"
bzip2 = "0.6"
blowfish = "0.10.0"
byteorder = "1.5"
sha-1 = "0.10"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = []
